# riva-live-dictation

./: .gitignore  README.md  README_parakeet.md  docker-compose.yaml  global_packages.txt  mac_parakeet_native.py  modern_dictation.py  pyproject.toml  requirements.txt  win-parakeet.py
old/: modern_dictation.py  realtime_dictation.py
riva_dictation/: __init__.py  app.py  cli.py  config.py
riva_dictation/gui/: __init__.py  app.py  widgets.py
riva_dictation/tests/: run_tests.py  test_app.py  test_widgets.py
